# sro

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_ablate_out.json  tmp_saturation.py
bench/: README.md  break_dev_200.jsonl  break_dev_fixture.jsonl
configs/: benchmarks.yaml  default.yaml  splitter.yaml
scripts/: README.md  _debug_print_tokens.py  _debug_q001.py  _debug_q012.py  _debug_split.py  _import_test.py  _regen_fixture.py  _regen_fixture_from_preds.py  _suggest_fix_fixture.py  _tmp_bench_eval_run.py  ablate_rules_vs_hybrid.py  align_fixture_to_tokenization.py  augment_pairs_y_true.py  bench_break_to_fixture.py  bench_eval.py  bench_report.py  build_faiss.py  calibrate_nli.py  check_split_schema.py  demo_alternation.py  demo_retrieval_fetch.py  dump_bnd_hist.py  dump_tokens.py  eval_claims.py  eval_splitter.py  export_break_highlevel.py  export_splitter_onnx.py  log_search_traces.py  make_break_subset.py  make_dev_pairs.py  prepare_tagger_data.py  print_latest_proofs.py  print_preds.py  run_dev.py  run_e2e_retrieval.py  run_question.py  split_train_val.py  sweep_add_prob.py  test_nli.py  trace_view.py  (+8 more)
sro/: config.py  types.py
tests/: conftest.py  test_alternation_policy.py  test_backend_labels.py  test_benchmark_break.py  test_calibration_effect.py  test_calibration_io.py  test_claim_schema.py  test_cross_claim_safety.py  test_determinism.py  test_embeddings_cache.py  test_eval_stage_p95.py  test_faiss_build_and_search.py  test_fixture_validity.py  test_force_flag.py  (+21 more)
(+60 files in other folders)
