[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
  "E402",  # env vars before imports in CLI scripts
  "E501",  # long lines – not worth wrapping for V2
  "B905",  # zip(strict=...) pedantry
  "B008",  # default-arg calls
]

[tool.pytest.ini_options]
addopts = "-q"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "types-PyYAML"]

[tool.coverage.run]
branch = true
source = ["sro", "scripts"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 85
